Critical/check-impersonate-group-role/.chainsaw-test/bad-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: risky-impersonate-groups
rules:
- apiGroups: ["*"]
  resources: ["groups"]
  verbs: ["impersonate"]
