Critical/check-impersonate-group-role/.chainsaw-test/bad-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: default
  name: risky-impersonate-groups
  
rules:
- apiGroups: ["*"]
  resources: ["groups"]
  verbs: ["impersonate"]
