Critical/check-impersonate-group-role/.chainsaw-test/crb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb02
subjects:
- kind: ServiceAccount
  namespace: test2
  name: bar
roleRef:
  kind: ClusterRole
  name: risky-impersonate-groups
  apiGroup: rbac.authorization.k8s.io
