Critical/check-impersonate-group-role/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-all-actions-role
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../impersonate-group-role.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: check-impersonate-group-role
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: bad-role.yaml
    # - apply:
    #     file: good-role.yaml
    - apply:
        file: bad-clusterrole.yaml
    # - apply:
    #     file: good-clusterrole.yaml
    # - apply:
    #     file: rb-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: rb-bad.yaml
    # - apply:
    #     file: crb-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: crb-bad.yaml
